--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,3 @@
 {
-  "$schema": "https://openapi.vercel.sh/vercel.json",
-  "crons": [
-    {
-      "path": "/api/cron/bot-clicks",
-      "schedule": "* * * * *"
-    },
-    {
-      "path": "/api/cron/activate-games",
-      "schedule": "* * * * *"
-    },
-    {
-      "path": "/api/cron/create-rotation",
-      "schedule": "45 * * * *"
-    }
-  ]
+  "$schema": "https://openapi.vercel.sh/vercel.json"
 }
